Fix hamburger icon on mobile padding

--- a/src/styles/components/list.scss
+++ b/src/styles/components/list.scss
@@ -65,7 +65,7 @@
   position: absolute;
   right: 1.5em;
   margin-top: -58px;
-  z-index: 99;
+  z-index: 4;
 
   .items {
     display: flex;
